--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "raytracer_rust"
 version = "0.1.0"
-authors = ["Nicolas Hollmann <43784252+NHollmann@users.noreply.github.com>"]
+authors = ["Nicolas Hollmann"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
